[gd_scene load_steps=19 format=3 uid="uid://disj0ma6ictti"]

[ext_resource type="Script" path="res://Scenes/Effects/small_bombs.gd" id="1_m5cj0"]
[ext_resource type="Texture2D" uid="uid://bg33im4vqhq0u" path="res://Art/Effects/Small_Bomb.png" id="2_w6tpw"]
[ext_resource type="Texture2D" uid="uid://c4kj5wlgsypjb" path="res://Art/Effects/Small_Explosion.png" id="3_lfifk"]
[ext_resource type="Script" path="res://Scenes/Entities/effect_audio_player.gd" id="4_6cvqn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fsw7"]
size = Vector2(14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkv6x"]
atlas = ExtResource("2_w6tpw")
region = Rect2(0, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5c33"]
atlas = ExtResource("2_w6tpw")
region = Rect2(15, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_ympwv"]
atlas = ExtResource("2_w6tpw")
region = Rect2(30, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_58dkk"]
atlas = ExtResource("2_w6tpw")
region = Rect2(45, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_l08ti"]
atlas = ExtResource("2_w6tpw")
region = Rect2(60, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eqtr"]
atlas = ExtResource("2_w6tpw")
region = Rect2(75, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfk55"]
atlas = ExtResource("3_lfifk")
region = Rect2(0, 0, 29, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsa1b"]
atlas = ExtResource("3_lfifk")
region = Rect2(29, 0, 29, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkuw5"]
atlas = ExtResource("3_lfifk")
region = Rect2(58, 0, 29, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3iqk"]
atlas = ExtResource("3_lfifk")
region = Rect2(87, 0, 29, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_a80wg"]
atlas = ExtResource("3_lfifk")
region = Rect2(116, 0, 29, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_18ha7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkv6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5c33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ympwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58dkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l08ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eqtr")
}],
"loop": true,
"name": &"default",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfk55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsa1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkuw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3iqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a80wg")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explode",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqwm0"]
size = Vector2(10, 10)

[node name="SmallBombs" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_m5cj0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_7fsw7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_18ha7")
autoplay = "default"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("4_6cvqn")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fqwm0")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
